# Horizon

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
Game/: CMakeLists.txt
Game/Assets/: Suzanne.fbx  TestScene.hscene
Game/Shaders/: CloudCompute.comp  FXAA.frag  FXAA.vert  GBufferOutput.frag  Geometry.frag  Geometry.mesh  Geometry.task  GodRay.comp  GodRayComposite.frag  Meshlet.frag  Meshlet.mesh  ProceduralSkybox.frag  ProceduralSkybox.vert
Game/Source/: PlayerCharacter.cpp  PlayerCharacter.h
Source/Application/: CMakeLists.txt  main.cpp
Source/Application/Engine/: Engine.cpp  Engine.h  EngineReport.h  ISystem.h  System.h
Source/Application/Systems/Dummy/: DummySystem.cpp  DummySystem.h
Source/Application/Systems/ECS/: EntityComponentSystem.cpp  EntityComponentSystem.h
Source/Application/Systems/Renderer/: RenderBatch.h  RenderSystem.cpp  RenderSystem.h
Source/Application/Systems/Window/: WindowSystem.cpp  WindowSystem.h
Source/Engine/: CMakeLists.txt
Source/Engine/Asset/: Asset.h  AssetSystem.cpp  AssetSystem.h
Source/Engine/Asset/Importer/: Importer.h
Source/Engine/Asset/Material/: MaterialAsset.cpp  (+3 more)
Source/Engine/Cache/: CacheContext.cpp  CacheContext.h  GfxCache.h  WindowCache.h
Source/Engine/Core/: Context.h  Engine.cpp  Engine.h  EngineReport.h  IContext.h  ISystem.h  System.h
Source/Engine/Dummy/: DummyContext.cpp  DummyContext.h  DummySystem.cpp  DummySystem.h
Source/Engine/ECS/: ECS.h  ECSSystem.cpp  ECSSystem.h  IECS.h
Source/Engine/Engine/: Engine.cpp  Engine.h  EngineReport.h
Source/Engine/EntityComponent/: EntityComponentSystem.cpp  EntityComponentSystem.h  EntitySystem.h
Source/Engine/FrameGraph/: FrameGraph.cpp  FrameGraph.h  GraphResourceHandle.h
Source/Engine/Game/: GameState.h  GameSystem.cpp  GameSystem.h
Source/Engine/Graphics/: GfxContext.cpp  GfxContext.h  GraphicsSystem.cpp  GraphicsSystem.h  PipelineContext.cpp  PipelineContext.h  RenderRequest.h  SamplerContext.cpp  SamplerContext.h  ShaderContext.cpp  ShaderContext.h
Source/Engine/Input/: InputSystem.cpp  InputSystem.h
Source/Engine/Job/: IJob.h  JobHandle.h  JobSystem.cpp  JobSystem.h
Source/Engine/Object/: IObject.h  Object.h
Source/Engine/Pipeline/: GraphicsPipelineStateDesc.h  PipelineSystem.cpp  PipelineSystem.h
Source/Engine/PipelineStateObject/: BlendMode.cpp  BlendMode.h  PipelineStateObjectDesc.h
Source/Engine/Presentation/: PresentRequest.h  PresentationObjects.h  PresentationSystem.cpp  PresentationSystem.h
Source/Engine/Renderer/: EditorRenderer.cpp  EditorRenderer.h
Source/Engine/ResourceCache/: ResourceCacheSystem.cpp  ResourceCacheSystem.h
Source/Engine/System/: ISystem.h  System.h  SystemReport.h
Source/Engine/VirtualFile/: VirtualFileSystem.cpp  VirtualFileSystem.h
Source/Engine/Window/: WindowSystem.cpp  WindowSystem.h
Source/Engine/World/: EntityComponentSystem.cpp  EntityComponentSystem.h
Source/Runtime/: CMakeLists.txt  PCH.h
Source/Runtime/Camera/: Camera.cpp  Camera.h
Source/Runtime/Data/: DataReader.cpp  DataReader.h  Geometry.cpp  Geometry.h
Source/Runtime/Input/: InputAction.h  InputDispatcher.cpp  InputDispatcher.h  InputEvents.h  InputKeyCode.h  InputModifiers.h  InputMouseButton.h
Source/Runtime/Logger/: Logger.cpp  Logger.h
Source/Runtime/MeshLoader/: MeshData.h  MeshLoader.cpp  MeshLoader.h
Source/Runtime/ShaderCompiler/: ShaderCompiler.cpp  ShaderCompiler.h
Source/Runtime/Window/: BasicWindow.cpp  BasicWindow.h  Window.cpp  Window.h  WindowPollEvent.h
(+209 files in other folders)
